# papagaio.md

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
.obsidian/: workspace.json
examples/: 01-basic-substitution.md  02-multiple-patterns.md  03-custom-delimiters.md  04-process-text-inline.md  05-type-modifiers.md  06-optional-captures.md  07-eval-blocks.md  08-eval-globals.md  09-pure-eval.md  10-block-captures.md  11-escaping.md  12-process-pairs.md  13-global-md-ast.md  14-shared-state.md  15-ffi-memory.md  16-obsidian-api.md  17-ffi-dlopen.md  18-ffi-calls.md  19-ffi-callbacks.md  20-ffi-structs.md  21-ffi-arrays.md  22-ffi-errors.md  23-ffi-utilities.md  24-advanced-types.md  25-case-and-aliases.md  26-prefix-suffix.md  27-replacement-eval.md  28-block-variants.md
obsidian-plugin/: Makefile  build.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: main.js  main.ts
obsidian-plugin/wasm/: Makefile  papagaio_wasm.c
papagaio/: Makefile  papagaio.c  papagaio.h  teste.lua
papagaio-ffi/: Makefile  papagaio_ffi.c  papagaio_ffi.h  teste.lua
papagaio-md/: Makefile  cli.c  papagaio_md.lua  papagaio_md_script.c  test.md
